--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Resolution Held</string>
     <string name="reset">Reset</string>
+    <string name="next">Next</string>
+    <string name="previous">previous</string>
 </resources>
